--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -19692,7 +19692,7 @@
   header .navbar-brand .mobile-logo {
     visibility: visible !important;
     opacity: 1 !important;
-    width: auto !important;
+    width: 200px !important;
   }
   header .navbar-brand .mobile-logo:focus {
     outline: none;
